# batteryctl

./: CLAUDE.md  CLAUDE.md.bak  Cargo.toml  README.md  versions.json
src/: alert.rs  battery.rs  display.rs  health.rs  history.rs  main.rs  optimize.rs  power.rs
