[package]
name = "batteryctl"
version = "1.0.1"
edition = "2021"
authors = ["Angel Samuel Suesca Ríos <suescapsam@gmail.com>"]
description = "Battery health and power management CLI for macOS and Linux"
license = "MIT"
repository = "https://github.com/Samsuesca/batteryctl"

[dependencies]
clap = { version = "4", features = ["derive"] }
sysinfo = "0.33"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
colored = "2"
tabled = "0.17"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
anyhow = "1"
ctrlc = "3"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
